--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 
 services:
   web-user-portal:
@@ -9,7 +8,7 @@ services:
     ports:
       - "80:3000"
     environment:
-      VITE_API_BASE_URL: "http://localhost:3000/"
+      VITE_API_BASE_URL: "http://localhost/"
     volumes:
       - .:/app
       - /app/node_modules
