--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,20 @@
-# .github/workflows/ci.yml
 name: CI
 
-on:
+ on:
+  push:
+    branches: [ "dev" ] 
+  pull_request: 
+    branches: [ "*" ]
 
   jobs:
-    install:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version: 18
-            cache: npm
-        - run: npm ci
-
     lint:
       runs-on: ubuntu-latest
-      needs: install
       steps:
         - uses: actions/checkout@v4
         - uses: actions/setup-node@v4
           with:
             node-version: 18
             cache: npm
-        - run: npm ci
         - run: npm run lint:check
 
     type-check:
@@ -35,7 +26,6 @@ on:
           with:
             node-version: 18
             cache: npm
-        - run: npm ci
         - run: npm run type-check
 
     test:
@@ -47,7 +37,6 @@ on:
           with:
             node-version: 18
             cache: npm
-        - run: npm ci
         - run: npm run test:unit
 
     build:
@@ -59,7 +48,6 @@ on:
           with:
             node-version: 18
             cache: npm
-        - run: npm ci
         - run: npm run build
 
     health-check:
@@ -68,7 +56,7 @@ on:
       steps:
         - uses: actions/checkout@v4
         - name: Start Docker Compose
-          run: docker compose up -d
+          run: docker compose up --build -d
         - name: Wait for server to be healthy
           run: |
             for i in {1..20}; do
