--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,20 +2,21 @@ name: CI
 
 on:
   push:
-    branches: [ "dev" ] 
-  pull_request: 
+    branches: [ "dev" ]
+  pull_request:
     branches: [ "*" ]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version: 18
-            cache: npm
-        - run: npm run lint:check
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+      - run: npm ci
+      - run: npm run lint:check
 
   type-check:
     runs-on: ubuntu-latest
@@ -26,6 +27,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - run: npm ci
       - run: npm run type-check
 
   test:
@@ -37,6 +39,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - run: npm ci
       - run: npm run test:unit
 
   build:
@@ -48,6 +51,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - run: npm ci
       - run: npm run build
 
   health-check:
@@ -69,5 +73,3 @@ jobs:
           echo "Server did not become healthy in time." && exit 1
       - name: Stop Docker Compose
         run: docker compose down
-
-
