--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,3 +73,26 @@ jobs:
           echo "Server did not become healthy in time." && exit 1
       - name: Stop Docker Compose
         run: docker compose down
+
+  docker-build-and-push:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUBTOKEN }}
+
+      - name: Build Docker image
+        run: |
+          docker build -f docker/Dockerfile.dev -t ghcr.io/visiobook-esp/web-user-portal-dev:latest ./
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/visiobook-esp/web-user-portal-dev:latest
+        
