--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
 
   docker-build-and-push:
     runs-on: ubuntu-latest
-    needs: test
+    needs: health-check
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
