--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: [ "*" ]
 
 jobs:
-  lint:
+
+  prettier:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,7 +17,19 @@ jobs:
           node-version: 18
           cache: npm
       - run: npm ci
-      - run: NODE_ENV=production npx eslint "src/*/.{js,ts,vue}"
+      - run: npm run format:check
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: prettier
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+      - run: npm ci
+      - run: NODE_ENV=production npx eslint "src/*/.{js,ts,vue,json,css,scss,md}"
 
   type-check:
     runs-on: ubuntu-latest
@@ -88,9 +101,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUBTOKEN }}
 
-      - name: Build Docker image
+      - name: Build Docker imageS
         run: |
-          docker build -f docker/Dockerfile.dev -t ghcr.io/visiobook-esp/web-user-portal-dev:latest ./
+          docker build -f docker/Dockerfile -t ghcr.io/visiobook-esp/web-user-portal-dev:latest ./
 
       - name: Push Docker image
         run: |
