--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,4 +108,29 @@ jobs:
       - name: Push Docker image
         run: |
           docker push ghcr.io/visiobook-esp/web-user-portal-dev:latest
-        
+
+  build-docker-image-prod:  
+    runs-on: ubuntu-latest
+    needs: docker-build-and-push
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build production Docker image
+        run: docker build -t myapp:prod -f docker/Dockerfile .
+      - name: Run production container
+        run: docker run -d --name myapp-prod -p 3000:3000 myapp:prod
+      - name: Wait for health endpoint
+        run: |
+          for i in {1..20}; do
+            if curl -sf http://localhost:3000/health; then
+              echo "Health check passed!"
+              exit 0
+            fi
+            echo "Waiting for health endpoint... ($i)"
+            sleep 3
+          done
+          echo "Health check failed!"
+          docker logs myapp-prod
+          exit 1
+      - name: Cleanup container
+        run: docker rm -f myapp-prod
+
