--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,6 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    needs: prettier
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -33,7 +32,6 @@ jobs:
 
   type-check:
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -45,7 +43,6 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: type-check
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -57,7 +54,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -67,9 +63,8 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-  health-check:
+  health-check-dev:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - uses: actions/checkout@v4
       - name: Start Docker Compose
@@ -84,41 +79,16 @@ jobs:
             sleep 3
           done
           echo "Server did not become healthy in time." && exit 1
-      - name: Stop Docker Compose
-        run: docker compose down
-
-  docker-build-and-push:
-    runs-on: ubuntu-latest
-    needs: health-check
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUBTOKEN }}
-
-      - name: Build Docker imageS
-        run: |
-          docker build -f docker/Dockerfile -t ghcr.io/visiobook-esp/web-user-portal-dev:latest ./
-
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/visiobook-esp/web-user-portal-dev:latest
 
   build-docker-image-prod:  
     runs-on: ubuntu-latest
-    needs: docker-build-and-push
     steps:
       - uses: actions/checkout@v4
       - name: Build production Docker image
-        run: docker build -t myapp:prod -f docker/Dockerfile .
+        run: docker build -t myapp:prod -f docker/Dockerfile.prod .
       - name: Run production container
         run: docker run -d --name myapp-prod -p 3000:3000 myapp:prod
-      - name: Wait for health endpoint
+      - name: Health check in production
         run: |
           for i in {1..20}; do
             if curl -sf http://localhost:3000/health; then
@@ -133,4 +103,27 @@ jobs:
           exit 1
       - name: Cleanup container
         run: docker rm -f myapp-prod
+
+  docker-build-and-push:
+    runs-on: ubuntu-latest
+    needs: prettier, lint, type-check, test, build, health-check-dev, build-docker-image-prod
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUBTOKEN }}
+
+      - name: Build Docker images
+        run: |
+          docker build -f docker/Dockerfile.prod -t ghcr.io/visiobook-esp/web-user-portal-dev:latest ./
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/visiobook-esp/web-user-portal-dev:latest
+
 
